tests/ui/typeck/path-to-method-sugg-unresolved-expr.rs
fn main() {
    let page_size = page_size::get();
    //~^ ERROR failed to resolve: use of undeclared crate or module `page_size`
}
